0.45:
 * Fixed crash when SVN log lacks author information (obarthel).
 * Additional git log command validation (cym13).
 * Added --file-show-filter REGEX option (swoogles).

0.44:
 * Fixed crash when taking a screenshot with an odd resolution.
 * Fixed type deduction compilation error with newer versions of GCC.
 * Documentation improvements.

0.43:
 * Updated boost autoconf macros to fix multi-arch detection.

0.42:
 * Fixed bzr log command when no start date was specified (chrisf).
 * Fixed hg log commit order when date range specified.
 * Fixed hg log command line on Windows.
 * Fixed parser bug in date range filtering code.

0.41:
 * Multi-monitor support using SDL 2.0 when available.
 * SDL 1.2 support is deprecated.
 * Full screen mode now uses desktop resolution by default.
 * Added --start-date, --stop-date 'YYYY-MM-DD hh:mm:ss' options.
 * Added --dir-name-depth option.
 * Changed --file-idle-time default value to 0.
 * Changed screenshot format to PNG.

0.40:
 * Added caption support.
 * Improved command line interoperability on Windows.
 * Fixed directory deletion short circuiting processing the rest of a commit.
 * Fixed issue loading non-ascii user image filenames on windows.
 * Ignore UTF-8 byte order mark at the start of lines in custom log files.
 * Fix to boost macros for Macs and non-GNU systems (mistydemeo).
 * Autotools improvements (flameeyes).

0.39:
 * Fixed blurry non power of 2 logos.
 * File colour changes now supported in custom logs (rmyorston).
 * Fixed building against Boost 1.50 (svenstaro).
 * Updated boost autoconf macros (flameeyes).
 * Autogen script (matthiaskrgr).

0.38:
 * New high quality sprites.
 * Fullscreen toggle with alt + enter.
 * Window is now resizable. -WIDTHxHEIGHT! creates a non-resizable window.
 * Lowered minimum zoom distance.
 * Use AM_CPPFLAGS in Makefile.am to allow passing custom CPPFLAGS.
 * Don't add files that match the path of a known directory.