@@ -131,11 +131,17 @@ Font colour for highlighted users in hex.
 \fB\-\-selection\-colour FFFFFF\fR
 Font colour for selected users and files.
 .TP
+\fB\-\-filename\-colour FFFFFF\fR
+Font colour for filenames.
+.TP
 \fB\-\-dir\-colour FFFFFF\fR
 Font colour for directories.
 .TP
 \fB\-\-dir\-name\-depth DEPTH\fR
 Draw names of directories down to a specific depth in the tree.
+.TP
+\fB\-\-filename\-time SECONDS\fR
+Duration to keep filenames on screen (>= 2.0).
 .TP
 \fB\-\-file\-extensions\fR
 Show filename extensions only.
@@ -143,7 +149,7 @@ Show filename extensions only.
 \fB\-\-file\-filter REGEX\fR
 Filter out any files matching a specified regular expression.
 .TP
-\f8\-\-file\-show\-filter REGEX\fR
+\fB\-\-file\-show\-filter REGEX\fR
 Show only files matching this regular expression.
 .TP
 \fB\-\-user\-filter REGEX\fR
