@@ -2,6 +2,7 @@
  * Fixed crash when SVN log lacks author information (obarthel).
  * Additional git log command validation (cym13).
  * Added --file-show-filter REGEX option (swoogles).
+ * Added --filename-time and filename-colour options (gh2k).
 
 0.44:
  * Fixed crash when taking a screenshot with an odd resolution.
